tests/ui/lint/snapshots/exit_after_defer.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `os.Exit` skips `defer`
   ╭─[test.lis:8:3]
 7 │   defer cleanup()
 8 │   os.Exit(1)
   ·   ─────┬────
   ·        ╰── exits before `defer` can run
 9 │ }
   ╰────
  help: `os.Exit` will terminate the process without running deferred calls. Run the cleanup before exiting instead of deferring it · code: [lint.exit_after_defer]
