tests/ui/lint/snapshots/exit_after_defer_in_lambda.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `os.Exit` skips `defer`
    ╭─[test.lis:9:5]
  8 │     defer cleanup()
  9 │     os.Exit(1)
    ·     ─────┬────
    ·          ╰── exits before `defer` can run
 10 │   }
    ╰────
  help: `os.Exit` will terminate the process without running deferred calls. Run the cleanup before exiting instead of deferring it · code: [lint.exit_after_defer]
