tests/ui/lint/snapshots/exit_after_defer_nested_in_branch.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `os.Exit` skips `defer`
    ╭─[test.lis:9:5]
  8 │   if os.Getpid() > 0 {
  9 │     os.Exit(1)
    ·     ─────┬────
    ·          ╰── exits before `defer` can run
 10 │   }
    ╰────
  help: `os.Exit` will terminate the process without running deferred calls. Run the cleanup before exiting instead of deferring it · code: [lint.exit_after_defer]
