tests/ui/lint/snapshots/field_attribute_without_struct_attribute.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Orphan field attribute
   ╭─[test.lis:3:3]
 2 │ pub struct User {
 3 │   #[json(omitempty)]
   ·   ─────────┬────────
   ·            ╰── field has attribute but struct does not
 4 │   name: string,
   ╰────
  help: Add `#[json]` atop the struct definition to enable field-level attributes · code: [attribute.orphan_field_attribute]
