tests/ui/lint/snapshots/field_tag_json_does_not_inherit_struct_omitempty.snap
---
source: tests/ui/lint/mod.rs
---
  ● Prefer predefined tag alias
   ╭─[test.lis:8:3]
 7 │ pub struct User {
 8 │   #[tag("json", "home")]
   ·   ───────────┬──────────
   ·              ╰── use alias instead
 9 │   pub address: Address,
   ╰────
  help: Use `#[json(...)]` instead of `#[tag(...)]` for better validation · code: [lint.tag_has_alias]
