tests/ui/lint/snapshots/field_tag_requires_struct_opt_in.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Orphan field attribute
   ╭─[test.lis:3:3]
 2 │ pub struct User {
 3 │   #[bson("custom_name")]
   ·   ───────────┬──────────
   ·              ╰── field has attribute but struct does not
 4 │   name: string,
   ╰────
  help: Add `#[bson]` atop the struct definition to enable field-level attributes · code: [attribute.orphan_field_attribute]
