tests/ui/lint/snapshots/fix_bind_instead_of_map.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(o: Option<int>) -> Option<int> {
  o.and_then(|x| Some(x + 1))
}
=== fixed ===
pub fn f(o: Option<int>) -> Option<int> {
  o.map(|x| x + 1)
}
