tests/ui/lint/snapshots/fix_bool_literal_comparison_eq_true.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let x = true;
  let _ = x == true
}
=== fixed ===
fn main() {
  let x = true;
  let _ = x
}
